		-[Core] Clear exception is thrown when invalid Expression is passed on to 
		 ExpressionBuildingEventArgs.Expression. (fixes #354)
		-[Core] Improved exception message when registering generic types with type constraints while in
		 overriding mode. (fixes #384)
		-[Core] Improveed exception message thrown when RegisterCollection is called twice. (fixes #378)

	Project Changes:
		-Projects for SimpleInjector.dll merged into one single project.
		-Test projects for SimpleInjector core library merged into one single project.
		-Projects for SimpleInjector.Extensions.ExecutionContextScoping.dll merged into one single project.
		-Projects for SimpleInjector.Extensions.LifetimeScoping.dll merged into one single project.
		-Moved from NUnit to MSTest, since MSTest now supports .NET Core projects and will run cross-platform
		 and NUnit is very unreliable under .NET Core.
		-Allowed the projects to compile in the absence of the real strong name key.
		-Support for PCL dropped. (fixes #306)


Version 3.3.1 (v3.3.1 RTM) 2016-11-23

	Bug fixes:
		-[Core] PredicateContext.Consumer.ServiceType property contained incorrect value when the 
		 parent/consumer of a conditional registration was an open-generic registration. (fixes #333)


Version 3.3.0 (v3.3.0 RTM) 2016-11-21

	Improvements/Changes:
		-[Core] Marked ContainerOptions.ResolveUnregisteredCollections obsolete. (fixes #303)
		-[Core] Removed unneeded dependencies in .NETStandard NuGet release. (fixes #312)
		-[Core] Disabled Dynamic Assembly Compilation by default. (fixes #274)
		-[Core] Added ContainerOptions.DefaultLifestyle property to make it easier to override the default
		 (transient) lifestyle. (fixes #313)
		-[Core] Improved error message in case a registration couldn't be resolved caused by incorrect
		 dynamic assembly loading. (fixes #325)
		-[LifetimeScoping] Marked RegisterLifetimeScope and GetCurrentLifetimeScope obsolete. (fixes #303)